--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-26 12:56:25
+lastsearch = 2024-07-26 17:43:33
 
 [tiki.vn]
 match = -133.3%%
@@ -155,4 +155,9 @@ url = https://duicuunuongnhatthuyphong.com/chan-cuu-chien-gion
 match = 0.0%%
 title = Chó Chăn Cừu Đức - Audi Pet
 url = https://audipet.com/cho-chan-cuu-duc.php
+
+[bibomart.com.vn]
+match = -86.7%%
+title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
+url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
 
