--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-26 06:00:50
+lastsearch = 2024-07-26 17:35:12
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan Hoi Ching Ella - HKU Business School
+url = https://hk.linkedin.com/in/chan-hoi-ching-ella
 
 [www.instagram.com]
-match = -238.5%%
-title = Coco Chan (@cocopops072) • Instagram photos and videos
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -230.8%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -200,4 +200,9 @@ url = https://theloophk.com/next-up-coco-chan-and-valerie-ho-of-omsa/
 match = 0.0%%
 title = 
 url = https://glamgo.s3.uk.io.cloud.ovh.net/coco-lee-net-worth-2023-how-rich-is-she-now.html
+
+[slashfabcu.wixsite.com]
+match = -53.8%%
+title = WOO, HONG TING COCO | Artists
+url = https://slashfabcu.wixsite.com/artists/coco-woo-hong-ting
 
