--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-26 15:41:56
+lastsearch = 2024-07-26 17:42:03
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [noithatdaithanh.vn]
 match = -47.6%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = -114.3%%
+title = Hộ chiếu - Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt ...
+url = https://www.roc-taiwan.org/vn_vi/cat/9.html
 
 [zh.wikipedia.org]
 match = -9.5%%
