--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-26 11:46:40
+lastsearch = 2024-07-26 17:38:37
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -164.7%%
-title = How can the HOA kick you out of your house when you ...
-url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
+match = -176.5%%
+title = What can I do when a Homeowner's Association pops up in ...
+url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -112,9 +112,9 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
-match = -147.1%%
-title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
-url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919b.COM.PDF
+match = -129.4%%
+title = Chapter 720 Section 303 - 2018 Florida Statutes
+url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
 
 [www.navy.mil]
 match = -23.5%%
@@ -377,9 +377,9 @@ title = Local News | Central Florida Headlines
 url = https://www.clickorlando.com/news/local/
 
 [www.tallahassee.com]
-match = 0.0%%
-title = 
-url = https://www.tallahassee.com/story/news/local/state/2024/07/01/florida-hoa-new-law-july/74265853007/
+match = -158.8%%
+title = New Florida laws coming July 1 affecting HOAs, bears ...
+url = https://www.tallahassee.com/story/news/politics/2024/06/26/new-florida-laws-july-hoa-bears-book-bans-wine/73995257007/
 
 [bluearrowpm.com]
 match = 0.0%%
