--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-26 16:35:42
+lastsearch = 2024-07-26 17:45:43
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = -100.0%%
+title = Blue Eye Samurai (TV Series 2023)
+url = https://www.imdb.com/title/tt13309742/
 
 [www.etsy.com]
 match = 35.7%%
@@ -42,9 +42,9 @@ title = I am a 19-year-old male. My chest size is 38, waist 36 bicep ...
 url = https://www.quora.com/I-am-a-19-year-old-male-My-chest-size-is-38-waist-36-bicep-12-weight-73-kg-and-BMI-23-What-would-I-have-to-do-to-get-to-a-32-waist
 
 [books.google.com]
-match = -292.9%%
-title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+xanh+16&source=bl&ots=luPmzRDXJn&sig=ACfU3U3Ms3ZngnWCuvCoeI0liabNZG-MPg&hl=en&sa=X&ved=2ahUKEwi01JPZnsGHAxU0FFkFHfiFDNMQ6AF6BAgbEAM
+match = -264.3%%
+title = Biblia hebraica cum notis criticis et versione Latina ad ...
+url = https://books.google.com/books?id=PBuHNqOHMEYC&pg=PA561&lpg=PA561&dq=man+re+xanh+16&source=bl&ots=cFSj_nwGvq&sig=ACfU3U3UYcsqgQEj4evCHTtQiGAdM55PPA&hl=en&sa=X&ved=2ahUKEwjyh9a0w8SHAxW4HUQIHVgcDbEQ6AF6BAgZEAM
 
 [mobilecity.vn]
 match = -207.1%%
