--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-26 21:36:56
+lastsearch = 2024-07-27 00:18:53
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOooF5tc6h694tysvGGPAnmVvkPOTRX-G6q49E5DSWdLPHLw5cLS8
+match = 3.4%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = -34.5%%
-title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOor9e7PVNUYmZJnGn4gD5F-RQB_SkYXt3wx2odp1QSL6ERXNPP3u
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
 match = -20.7%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [thegioidemonline.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 37.9%%
+title = Chiếu điều hòa cao su non Tencel màu Ghi
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [shopee.vn]
 match = -20.7%%
