--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-26 08:11:38
+lastsearch = 2024-07-27 00:27:52
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [m.facebook.com]
-match = -193.3%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP. ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2398165530563912/
+match = -200.0%%
+title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
+url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
 
 [dieuhanhgiaothong-sgtvt.hochiminhcity.gov.vn]
 match = -126.7
@@ -52,9 +52,9 @@ title = {search_title}
 url = {search_url}
 
 [www.foody.vn]
-match = -106.7%%
-title = Pong Quán - Nguyễn Gia Trí ở TP. HCM
-url = https://www.foody.vn/ho-chi-minh/pong-quan-nguyen-gia-tri
+match = -73.3%%
+title = Bò Né 2 Chị Em - Đường D2 ở TP. HCM
+url = https://www.foody.vn/ho-chi-minh/bo-ne-2-chi-em-duong-d-2
 
 [visana.vn]
 match = -233.3%%
@@ -182,8 +182,8 @@ title = Man City - Transfer news, results, fixtures, video and audio
 url = https://www.bbc.com/sport/football/teams/manchester-city
 
 [www.vietnamairport.vn]
-match = -240.0%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
+match = -213.3%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [tuoitre.vn]
