--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-26 17:59:01
+lastsearch = 2024-07-27 00:14:42
 
 [chieutrelanlan.com]
-match = -16.7%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
+match = -41.7%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [kyoryo.vn]
 match = -54.2%%
@@ -52,14 +52,14 @@ title = Hôm nay mới được nằm thử chiếc chiếu trúc, vô cùng má
 url = https://www.youtube.com/watch?v=kKMas4N_KAk
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [chieutrucsaigon.com]
-match = 12.5%%
-title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
+match = -14.3%%
+title = TIN TRONG NƯỚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
 
 [www.xskthcm.com]
 match = -83.3%%
@@ -79,7 +79,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [demxanh.com]
 match = -45.8%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoojz5Yk7gotJKA9l3YdTKrLdy7HMf3wCBeqkJ4UemhFFbHLT8OR
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqoqHJw4B3K6XYrCfnFfz4UpeBbQHmOXafAusQZ_GOKa288N-xX
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -274,7 +274,7 @@ url = https://roman.vn/huong-dan-cach-chon-aptomat-cho-ho-gia-dinh-chinh-xac-nha
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOoqKMJPqKy-WLeG3-4UvuOwV8ZkjYfC6YVx6ru0ddupJQld6IVDq
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOorTMh7zzkgVwQCZj09kr1IziJKDH9VXNK6H8VtHAHbBQjlzvjQN
 
 [www.sbv.gov.vn]
 match = -111.1%%
