--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-26 21:41:27
+lastsearch = 2024-07-27 00:21:39
 
 [everon.vip]
-match = -10.0%%
-title = NỆM EVERON
-url = https://everon.vip/nem
+match = 44.4%%
+title = Nệm Everon Ceramic
+url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
 match = 23.8%%
@@ -92,8 +92,8 @@ title = Nệm Everon
 url = https://noithatken.com/nem/nem-everon/
 
 [everonvietnam.com]
-match = -152.4%%
-title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & Blankets
+match = -128.6%%
+title = 160 X 200 | Page 32 Of 34 | Everon - Korean Pillows & ...
 url = https://everonvietnam.com/en/kich-co/160-x-200/page/32/
 
 [nem.vn]
