--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-26 13:39:16
+lastsearch = 2024-07-27 00:28:51
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -227.3%%
-title = SG920 Ghế xoay da lãnh đạo có thể nghỉ trưa
-url = https://noithathoaphat.com/ghe-da-van-phong-sg920
+match = -290.9%%
+title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
+url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
 
 [dandoxe.com]
 match = -154.5%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -154.5%%
-title = Thảm Lông Cừu Lót Ghế Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/tham-long-cuu-lot-ghe/
+match = -290.9%%
+title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
+url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html
 
 [richhome.vn]
 match = -190.9%%
