--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-26 22:51:52
+lastsearch = 2024-07-27 00:24:42
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -130,4 +130,9 @@ url = https://flexhouse.vn/tham-lot-san
 match = -40.9%%
 title = NỆM CAO SU 5 ZONE ALOELUX – KIM CƯƠNG
 url = https://www.sieuthinem.vn/nem-cao-su-5-zone-aloe-kim-cuong.html
+
+[0869125101.taphoa.so]
+match = -81.8%%
+title = Ga - Gối - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
+url = https://0869125101.taphoa.so/products/tham-trai-giuong-180x200-E4b8FaEqXyei7JaD9JrXQk
 
