--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-26 21:30:43
+lastsearch = 2024-07-27 00:49:56
 
 [everonvn.com.vn]
 match = 7.4%%
 title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOopdA3F8KKX69ATc9_1Qp-GLzWrN4elgTR1FUN0m45fLWf3aGInq
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/
+url = https://everon.com.vn/epm-19064/?srsltid=AfmBOooAfsW1JfUUrgw86ISRERyNxzPbvW4BLWUmSNHPx4ZO7tJvf7zM
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOopCuOO7InC2kx4564Hui2kSDut6fa9BDY-r7-kO_1VGXVWe309m
 
 [shopee.vn]
 match = -48.1%%
