--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-27 03:29:10
+lastsearch = 2024-07-27 04:14:25
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -176.5%%
-title = HOA President freaks out on kids using the community ...
-url = https://www.reddit.com/r/PublicFreakout/comments/1dxq9wn/hoa_president_freaks_out_on_kids_using_the/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
 match = -200.0%%
@@ -112,9 +112,9 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
-match = -129.4%%
-title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+match = -147.1%%
+title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
+url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919b.COM.PDF
 
 [www.navy.mil]
 match = -23.5%%
@@ -377,9 +377,9 @@ title = Local News | Central Florida Headlines
 url = https://www.clickorlando.com/news/local/
 
 [www.tallahassee.com]
-match = -158.8%%
-title = New Florida laws coming July 1 affecting HOAs, bears ...
-url = https://www.tallahassee.com/story/news/politics/2024/06/26/new-florida-laws-july-hoa-bears-book-bans-wine/73995257007/
+match = 0.0%%
+title = 
+url = https://www.tallahassee.com/story/news/local/state/2024/07/01/florida-hoa-new-law-july/74265853007/
 
 [bluearrowpm.com]
 match = 0.0%%
