--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-26 23:36:05
+lastsearch = 2024-07-27 04:11:59
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOorNjhusNBbV5lOxLDJ_AR04hv20KVx-FYluNVJtgtzsYHe81P62
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.tripadvisor.com]
 match = -112.5%%
